[package]
name = "bevy_miniquad"
version = "0.1.0"
authors = ["Tomasz Sterna <tomek@sterna.link>"]
edition = "2018"

[features]
log-impl = ["miniquad/log-impl"]

[dependencies]
bevy = { version = "=0.5.0", default-features = false }
miniquad = { git = "https://github.com/not-fl3/miniquad.git" }
log = "0.4"

[dev-dependencies]
quad-rand = "0.1"

[[example]]
name = "blobs"
required-features = ["log-impl"]
