[package]
name = "bevy_miniquad"
version = "0.1.0"
authors = ["Tomasz Sterna <tomek@sterna.link>"]
edition = "2018"

[features]
log-impl = ["miniquad/log-impl"]

[dependencies]
bevy_app = { version = "0.14.0-dev", default-features = false, path = "../bevy/crates/bevy_app" }
bevy_ecs = { version = "0.14.0-dev", default-features = false, path = "../bevy/crates/bevy_ecs" }
bevy_input = { version = "0.14.0-dev", default-features = false, path = "../bevy/crates/bevy_input" }
bevy_math = { version = "0.14.0-dev", default-features = false, path = "../bevy/crates/bevy_math" }
bevy_window = { version = "0.14.0-dev", default-features = false, path = "../bevy/crates/bevy_window" }
miniquad = "0.4"
log = "0.4"

[dev-dependencies]
bevy = { version = "0.14.0-dev", default-features = false, path = "../bevy" }
quad-rand = "0.1"

[[example]]
name = "blobs"
required-features = ["log-impl"]
